2007-07-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextField.m (-isFlipped): Report the text field as
	being flipped.

2007-06-29 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSecureTextFieldCell (-drawInteriorWithFrame:): Add
	some support for bullet echoing and a comment on the missing bits.

2007-06-28 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-_lockFocusInContext:inRect:): Ignore the frame
	origin when computing the clip area.

2007-06-27 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-setBoundsRotation:): Ignore the frame origin
	when computing the bounds.
	* Source/NSView.m (-drawPageBorderWithSize:): Remove test code
	accidentally introduced in last change.

2007-06-26 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSView.h: Add new MacOSX methods.
	* Source/NSView.m: Basic implementation of new MacOSX methods.
	Rewrote all the display* methods to use the new method
	[displayRectIgnoringOpacity:inContext] and made them more
	consistent. Add some documentation for the display mechanism.
	* Source/GSPDFPrintOperation.m (-_print),
	* Source/GSEPSPrintOperation.m (-_print),
	* Source/NSPrintOperation.m (NSView-_displayPageInRect:withInfo:): 
	Use new method [NSView displayRectIgnoringOpacity:inContext:]. 
	* Source/NSView.m (-endPage): Add DPSgrestore() call.

2007-06-23 10:43-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSObjectController.h
	* Source/NSObjectController.m: Changed "class" to "aClass" to 
	avoid issues with ObjC++ compilation in both the header and the
	.m file for consistency.  This change was suggested by Rob Burns
	and he provided a short patch via IRC.

2007-06-22 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSView.m: When setting frame and bounds, refrain from
	doing anything if the values set are the same as the of values.
	When setting frame size or rotation, update the bounds too (attempt
	to fix bug #20057).

2007-06-18 Fred Kiefer <FredKiefer@gmx.de>
