@@ -1,5 +1,16 @@
 2007-07-04 Fred Kiefer <FredKiefer@gmx.de>
 
+	* Source/NSPrintOperation.m (NSView-_displayPageInRect:withInfo:),
+	* Source/NSView.m (-_rebuildCoordinates, -initWithFrame:,
+	-initWithCoder:, -dealloc, -_updateBoundsMatrix, -setBounds:,
+	-setBoundsOrigin:, -setBoundsRotation:, -boundsRotation,
+	-_lockFocusInContext:inRect:):
+	Create _boundsMatrix only when needed and protect all uses of it.
+	* Source/NSView.m (-initWithCoder:): Remove call to
+	setFrameOrigin: on frame matrix.
+	
+2007-07-04 Fred Kiefer <FredKiefer@gmx.de>
+
 	* Source/NSTextField.m (-isFlipped): Report the text field as
 	being flipped.
 
